# Prompts_Manager

./: .gitignore  CLAUDE.md  Prompts.json  README.md  build.rs  prompt.rc
ref/: AI提示词大师系统.md  AI辅助快速读论文.txt  中文论文修改助手.md  中文论文修改助手.rar  中文论文审稿助手.txt  利用AI快速阅读论文.txt  参考大模型提示词.rar  发明专利修改提示词.txt  如何利用AI查文献.txt  无敌神级AI提示词.md  科研基金申请书撰写.rar  科研工作常用提示词.txt  职称材料评审提示词.txt  英文论文修改助手.md  英文论文审稿助手.txt  英文论文评审润色.md  论文修改意见提示词.txt  超级智能科研助手.rar  超级智能科研搭子.md  超级智能科研搭子.rar  超级论文撰写助手.md  超级论文撰写助手.rar
source/: Cargo.toml  Prompt.pyw  Prompt.spec  prompt.rc
source/src/: main.rs
src/: main.rs
